Barra laterale sx in working

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
 
         <aside class="">
             <div class="navbar-aside">
+                <div class="logocell">
+                        <img class="classnone" src="img/home.svg" alt="">
+                </div>
                 <div class="logo">
+
                     <img src="img/logo.svg" alt="">
                 </div>
                 <a id="items" class="item1 " href="#">
@@ -39,6 +43,35 @@
                     </span>
                     <span class="text">Videos</span>
                 </a>
+                <div class="sectioncollection">
+                    <div class="headeritem">
+                        MY COLLECTION
+                    </div>
+                    <a id="items" class="item1 " href="#">
+                            <svg class="icon-" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M2.25,12A9.73,9.73,0,0,1,6.59,3.89L5.76,2.64a11.25,11.25,0,0,0,0,18.72l.83-1.25A9.73,9.73,0,0,1,2.25,12Z"></path><path d="M18.24,2.64l-.83,1.25a9.75,9.75,0,0,1,0,16.22l.83,1.25a11.25,11.25,0,0,0,0-18.72Z"></path><path d="M9.37,8,8.53,6.8a6.25,6.25,0,0,0,0,10.4L9.37,16a4.75,4.75,0,0,1,0-7.9Z"></path><path d="M15.47,6.8,14.63,8a4.75,4.75,0,0,1,0,7.9l.83,1.25a6.25,6.25,0,0,0,0-10.4Z"></path><circle cx="12" cy="12" r="1.5"></circle></svg>
+                        <span class="text">My Mix</span>
+                    </a>
+                    <a id="items" class="item1 " href="#">
+                            <svg class="icon-" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M6.75,15a3.71,3.71,0,0,0-2.25-.77A3.75,3.75,0,1,0,8.25,18V3H6.75ZM4.5,20.25A2.25,2.25,0,1,1,6.75,18,2.25,2.25,0,0,1,4.5,20.25Z"></path><path d="M12 14.8H21V16.3H12z"></path><path d="M12 6.8H23V8.3H12z"></path><path d="M12 10.8H22V12.3H12z"></path></svg>
+                        <span class="text">Playlists</span>
+                    </a>
+                    <a id="items" class="item1 " href="#">
+                            <svg class="icon-"xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M20,5.63A10.2,10.2,0,0,0,4,18.37a10.13,10.13,0,0,0,6.84,3.77A10.42,10.42,0,0,0,12,22.2,10.2,10.2,0,0,0,20,5.63ZM20.65,13A8.7,8.7,0,1,1,12,3.3a8.79,8.79,0,0,1,1,.05A8.7,8.7,0,0,1,20.65,13Z"></path><path d="M12,9a3,3,0,1,0,3,3A3,3,0,0,0,12,9Zm0,4.5A1.5,1.5,0,1,1,13.5,12,1.5,1.5,0,0,1,12,13.5Z"></path></svg>
+                        <span class="text">Albums</span>
+                    </a>
+                    <a id="items" class="item1 " href="#">
+                            <svg class="icon-" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M8.1,4.65V15.91a3.45,3.45,0,1,0,1.5,2.84V5.85L19.8,3.49V14.11A3.45,3.45,0,1,0,21.3,17V1.61Zm-2,16a2,2,0,1,1,2-2A2,2,0,0,1,6.15,20.7Zm11.7-1.8A1.95,1.95,0,1,1,19.8,17,2,2,0,0,1,17.85,18.9Z"></path></svg>
+                        <span class="text">Tracks</span>
+                    </a>
+                    <a id="items" class="item1 " href="#">
+                            <svg class="icon-" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M1.8,3.6V20.4H22.2V3.6ZM20.7,18.9H3.3V5.1H20.7Z"></path><path d="M9.67,7.9v8.2L15.83,12Zm1.5,2.8L13.12,12l-1.95,1.3Z"></path></svg>
+                        <span class="text">Videos</span>
+                    </a>
+                    <a id="items" class="item1 " href="#">
+                            <svg class="icon-"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M20,4.22a5.67,5.67,0,0,0-9.68,4.57l-8,9.79,3.3,3.3,9.79-8c.18,0,.36.05.55.05a5.7,5.7,0,0,0,4-9.73ZM5.74,19.86,4.36,18.48l6.44-7.89a5.48,5.48,0,0,0,2.83,2.84Zm13.21-8.65a4.2,4.2,0,1,1,0-5.94A4.17,4.17,0,0,1,18.95,11.22Z"></path></svg>
+                        <span class="text">Artists</span>
+                    </a>
+                </div>
             </div>
 
         </aside>
