barra leterale working responsive

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <div class="navbar-aside">
                 <div class="logocell">
                         <img class="classnone" src="img/home.svg" alt="">
+                        <span id="items2 "class="text classnone spotifyhome">Spotify</span>
                 </div>
                 <div class="logo">
 
@@ -27,21 +28,21 @@
                 </div>
                 <a id="items" class="item1 " href="#">
                     <span class="icon-responsive">
-                        <img src="img/home.svg" alt="">
+                        <svg class="icon-"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 5.6L8.3 9.3 4.6 5.6 0.9 9.3 4.6 13 8.3 9.3 12 13 8.3 16.7 12 20.4 15.7 16.7 12 13 15.7 9.3 12 5.6z"></path><path d="M16.8 6.7H22V11.9H16.8z" transform="rotate(-45 19.4 9.3)"></path></svg>
                     </span>
-                    <span class="text">Home</span>
+                    <span id="items2"class="text">Home</span>
                 </a>
                 <a id="items" class="item2 " href="#">
                     <span class="icon-responsive">
-                        <img src="img/home.svg" alt="">
+                        <svg class="icon-"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M20.9,12.2 C20.9,7.39521356 17.0047864,3.5 12.2,3.5 C7.39521356,3.5 3.5,7.39521356 3.5,12.2 C3.5,17.0047864 7.39521356,20.9 12.2,20.9 C17.0047864,20.9 20.9,17.0047864 20.9,12.2 Z M22.4,12.2 C22.4,17.8332136 17.8332136,22.4 12.2,22.4 C6.56678644,22.4 2,17.8332136 2,12.2 C2,6.56678644 6.56678644,2 12.2,2 C17.8332136,2 22.4,6.56678644 22.4,12.2 Z"></path><path d="M7.82869925,17.5252594 L6.87509492,16.5716551 L9.83036628,9.83134582 L16.5696041,6.87542157 L17.5258411,7.827501 L14.5689784,14.5688784 L7.82869925,17.5252594 Z M13.4304216,13.4303216 L15.3530179,9.04697723 L10.9690337,10.9698542 L9.04734145,15.352802 L13.4304216,13.4303216 Z"></path></svg>
                     </span>
-                    <span class="text">Explore</span>
+                    <span id="items2" class="text">Explore</span>
                 </a>
                 <a id="items" class="item3 " href="#">
                     <span class="icon-responsive">
-                        <img src="img/home.svg" alt="">
+                        <svg class="icon-"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M1.8,3.6V20.4H22.2V3.6ZM20.7,18.9H3.3V5.1H20.7Z"></path><path d="M9.67,7.9v8.2L15.83,12Zm1.5,2.8L13.12,12l-1.95,1.3Z"></path></svg>
                     </span>
-                    <span class="text">Videos</span>
+                    <span id="items2" class="text">Videos</span>
                 </a>
                 <div class="sectioncollection">
                     <div class="headeritem">
@@ -70,6 +71,31 @@
                     <a id="items" class="item1 " href="#">
                             <svg class="icon-"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M20,4.22a5.67,5.67,0,0,0-9.68,4.57l-8,9.79,3.3,3.3,9.79-8c.18,0,.36.05.55.05a5.7,5.7,0,0,0,4-9.73ZM5.74,19.86,4.36,18.48l6.44-7.89a5.48,5.48,0,0,0,2.83,2.84Zm13.21-8.65a4.2,4.2,0,1,1,0-5.94A4.17,4.17,0,0,1,18.95,11.22Z"></path></svg>
                         <span class="text">Artists</span>
+                    </a>
+                </div>
+                <div class="sectioncollection">
+                    <div class="headeritem">
+                        MY PLAYLISTS
+                    </div>
+                    <a id="items" class="item1 " href="#">
+                            <svg class="iconi"  xmlns="http://www.w3.org/2000/svg" class="iconPlus--13wHf" viewBox="0 0 24 24"><path d="M17 11.3L12.8 11.3 12.8 7 11.3 7 11.3 11.3 7 11.3 7 12.8 11.3 12.8 11.3 17 12.8 17 12.8 12.8 17 12.8 17 11.3z"></path></svg>
+                        <span class="text">Create new playlists</span>
+                    </a>
+                    <a id="items" class="item1 " href="#">
+
+                        <span class="text">Sigala Radio</span>
+                    </a>
+                    <a id="items" class="item1 " href="#">
+                        <span class="text">Major Lazer Essential</span>
+                    </a>
+                    <a id="items" class="item1 " href="#">
+                        <span class="text">Onerepublic Essential</span>
+                    </a>
+                    <a id="items" class="item1 " href="#">
+                        <span class="text">Justin Bieber Essential</span>
+                    </a>
+                    <a id="items" class="item1 " href="#">
+                        <span class="text">SummerHits:2018</span>
                     </a>
                 </div>
             </div>
