--- a/index.html
+++ b/index.html
@@ -116,10 +116,18 @@
 
         </main>
 
-        <footer>
 
-
-        </footer>
     </div>
+    <footer class="mediaplay">
+        <div class="flexfooter">
+            <div class="borderplayer">
+            </div>
+            <div class="circleplayer"><i class="fas fa-circle"></i></div>
+            <div class="toolTip--fede">2.45</div>
+            <div class="leftcolumn">
+
+            </div>
+        </div>
+    </footer>
     </body>
 </html>
