--- a/index.html
+++ b/index.html
@@ -118,14 +118,21 @@
 
 
     </div>
-    <footer class="mediaplay">
+    <footer class="mediaplay clearfix">
         <div class="flexfooter">
             <div class="borderplayer">
             </div>
             <div class="circleplayer"><i class="fas fa-circle"></i></div>
             <div class="toolTip--fede">2.45</div>
             <div class="leftcolumn">
-
+                <div class="squareimg">
+                    <img src="https://resources.tidal.com/images/20d2d836/9921/4bcd/b1fa/4ff90e114a8f/320x320.jpg">
+                </div>
+                <div class="columnartista">
+                    <a href="#">Friend of mine</a>
+                    <a href="#">Avicii, Vargas & Lagola</a>
+                    <a href="#">In play da: Avicii(01)</a>    
+                </div>
             </div>
         </div>
     </footer>
