Possibilità di mettere like alla canzone ascoltata

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://kit.fontawesome.com/4aa4c430a6.js" crossorigin="anonymous"></script>
         <link rel="preload" href="https://open.scdn.co/cdn/fonts/CircularSpUIv3T-Book.3466e0ec.woff2" as="font" type="font/woff2" crossorigin="">
         <link rel="preload" href="https://open.scdn.co/cdn/fonts/CircularSpUIv3T-Bold.8d0a45cc.woff2" as="font" type="font/woff2" crossorigin="">
@@ -126,12 +126,17 @@
             <div class="toolTip--fede">2.45</div>
             <div class="leftcolumn">
                 <div class="squareimg">
-                    <img src="https://resources.tidal.com/images/20d2d836/9921/4bcd/b1fa/4ff90e114a8f/320x320.jpg">
+                    <img src="img/avicii.jpg">
                 </div>
                 <div class="columnartista">
                     <a href="#">Friend of mine</a>
                     <a href="#">Avicii, Vargas & Lagola</a>
-                    <a href="#">In play da: Avicii(01)</a>    
+                    <a href="#">In play da: Avicii(01)</a>
+                </div>
+                <div class="rowrhearts">
+                <svg class="small"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><circle cx="5.5" cy="12" r="1.5"></circle><circle cx="12" cy="12" r="1.5"></circle><circle cx="18.5" cy="12" r="1.5"></circle></svg>
+                <input id="heartsclick" type="checkbox"/>
+                <label class="small heart" for="heartsclick"> &hearts; </label>
                 </div>
             </div>
         </div>
