footer da finire

--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
             <div class="toolTip--fede">2.45</div>
             <div class="leftcolumn">
                 <div class="squareimg">
-                    <img src="img/avicii.jpg">
+                    <img class="riproduzioneimg" src="img/avicii.jpg">
+                <div class="riproduzione">
+                    </div>
                 </div>
                 <div class="columnartista">
                     <a href="#">Friend of mine</a>
@@ -137,6 +139,25 @@
                 <svg class="small"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><circle cx="5.5" cy="12" r="1.5"></circle><circle cx="12" cy="12" r="1.5"></circle><circle cx="18.5" cy="12" r="1.5"></circle></svg>
                 <input id="heartsclick" type="checkbox"/>
                 <label class="small heart" for="heartsclick"> &hearts; </label>
+                </div>
+            </div>
+            <div class="centercolumn">
+                <div class="mainplayer">
+                    <svg class="icon- small  playerhover1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M18.2 14.8L19.6 16.2 14.7 16.2 12 12 14.7 7.8 19.6 7.8 18.2 9.2 19.3 10.3 22.5 7 19.3 3.8 18.2 4.9 19.6 6.3 13.8 6.3 11.1 10.6 8.4 6.3 2.5 6.3 2.5 7.8 7.5 7.8 10.2 12 7.5 16.2 2.5 16.2 2.5 17.7 8.4 17.7 11.1 13.4 13.8 17.7 19.6 17.7 18.2 19.1 19.3 20.2 22.5 16.9 19.3 13.7 18.2 14.8z"></path></svg>
+                    <svg  class="icon- whitericon playerhover" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M19 4L8 11.3 8 4 5 4 5 20 8 20 8 12.7 19 20 19 4z"></path></svg>
+                    <svg  class="icon- whitericon playerhover"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill-rule="evenodd" d="M4 0L4 24 22 12 4 0z"></path></svg>
+                    <svg  class="icon- whitericon playerhover"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill-rule="evenodd" d="M16 4L16 11.3 5 4 5 20 16 12.7 16 20 19 20 19 4 16 4z"></path></svg>
+                    <svg class="icon- small playerhover1"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M6.16,13.2H8.85V11.7H3.6V17H5.1V14.26L11,20.18a.75.75,0,0,0,.53.22h8.1V18.9H11.86Z"></path><path d="M18.9,7V9.74L13,3.82a.75.75,0,0,0-.53-.22H4.35V5.1h7.79l5.7,5.7H15.15v1.5H20.4V7Z"></path></svg>
+                </div>
+            </div>
+            <div class="rightcolumn">
+                <div class="quality">
+                <svg class="icon- hifi"  width="42" height="22" viewBox="0 0 42 22" xmlns="http://www.w3.org/2000/svg"><path d="M13.6607 14.894H15.5197V7.106H13.6497V10.087H10.4927V7.106H8.64465V14.894H10.4927V11.671H13.6607V14.894Z"></path><path d="M20.3194 7.106H18.4604V14.894H20.3194V7.106Z"></path><path d="M28.9796 8.679V7.106H23.2596V14.894H25.0856V11.836H28.6496V10.307H25.0856V8.679H28.9796Z"></path><path d="M33.3553 7.106H31.4963V14.894H33.3553V7.106Z"></path></svg>
+                </div>
+                <div class="time">
+                    <p class="greytime">0:00 /</p>
+                    <p class="whitetime"> 3:25</p>
+
                 </div>
             </div>
         </div>
