--- a/index.html
+++ b/index.html
@@ -15,25 +15,10 @@
 
 $(document).ready(function(){
 
-	/*
-	 * Instance CirclePlayer inside jQuery doc ready
-	 *
-	 * CirclePlayer(jPlayerSelector, media, options)
-	 *   jPlayerSelector: String - The css selector of the jPlayer div.
-	 *   media: Object - The media object used in jPlayer("setMedia",media).
-	 *   options: Object - The jPlayer options.
-	 *
-	 * Multiple instances must set the cssSelectorAncestor in the jPlayer options. Defaults to "#cp_container_1" in CirclePlayer.
-	 *
-	 * The CirclePlayer uses the default supplied:"m4a, oga" if not given, which is different from the jPlayer default of supplied:"mp3"
-	 * Note that the {wmode:"window"} option is set to ensure playback in Firefox 3.6 with the Flash solution.
-	 * However, the OGA format would be used in this case with the HTML solution.
-	 */
-
 	var myCirclePlayer = new CirclePlayer("#jquery_jplayer_1",
 	{
-		m4a: "http://www.jplayer.org/audio/m4a/Miaow-07-Bubble.m4a",
-		oga: "http://www.jplayer.org/audio/ogg/Miaow-07-Bubble.ogg"
+		m4a: "peculiar.m4a",
+		oga: "peculiar.ogg"
 	}, {
 		cssSelectorAncestor: "#cp_container_1",
 		swfPath: "../../dist/jplayer",
@@ -166,14 +151,14 @@ $(document).ready(function(){
             <div class="toolTip--fede">2.45</div>
             <div class="leftcolumn">
                 <div class="squareimg">
-                    <img class="riproduzioneimg" src="img/avicii.jpg">
+                    <img class="riproduzioneimg" src="https://resources.tidal.com/images/7620d835/efbe/4dd0/8a49/d6491db37361/320x320.jpg">
                 <div class="riproduzione">
                     </div>
                 </div>
                 <div class="columnartista">
-                    <a href="#">Friend of mine</a>
-                    <a href="#">Avicii, Vargas & Lagola</a>
-                    <a href="#">In play da: Avicii(01)</a>
+                    <a href="#">Peculiarities</a>
+                    <a href="#">Federico Bartoli</a>
+                    <a href="#">In play da: Peculiarities(single)</a>
                 </div>
                 <div class="rowrhearts">
                 <svg class="small"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><circle cx="5.5" cy="12" r="1.5"></circle><circle cx="12" cy="12" r="1.5"></circle><circle cx="18.5" cy="12" r="1.5"></circle></svg>
