Inizio del main

--- a/index.html
+++ b/index.html
@@ -264,14 +264,41 @@ $(document).ready(function(){
 
             </header>
             <div class="contentmain">
-                <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h1>
-                <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h1>
-                <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h1>
-                <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h1>
-                <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h1>
-                <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h1>
-                <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h1>
-                <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h1>
+                <h4>Featured</h4>
+            </div>
+            <div class="itemcontainer">
+                <div class="containeritem2">
+                    <div class="itemcontainer-1">
+                        <div class="image1">
+                            <img src="https://resources.tidal.com/images/47348ca1/f6db/43f2/bad9/80ad90e49de7/1100x800.jpg" alt="">
+                        </div>
+                        <div class="descrizioni">
+                        <h5 class="playlist_write">PLAYLIST</h5>
+                        <h5 class="playlist_write2">Il meglio della musica in FM</h5>
+                        <h5 class="playlist_write3">Con il nuovo singolo di Achille Lauro</h5>
+                        </div>
+                    </div>
+                    <div class="itemcontainer-1">
+                        <div class="image1">
+                            <img src="https://resources.tidal.com/images/bbfc1f14/f1f1/49b5/bbd8/9a72b7e03a6e/1100x800.jpg" alt="">
+                        </div>
+                        <div class="descrizioni2">
+                        <h5 class="playlist_write">PLAYLIST</h5>
+                        <h5 class="playlist_write2">Il meglio dell'indie italiano</h5>
+                        <h5 class="playlist_write3">Con Eugenio in via di gioia</h5>
+                        </div>
+                    </div>
+                    <div class="itemcontainer-1">
+                        <div class="image1">
+                            <img src="https://resources.tidal.com/images/1f2b4603/0ab5/4f34/a143/19791bd7b214/1100x800.jpg" alt="">
+                        </div>
+                        <div class="descrizioni3">
+                        <h5 class="playlist_write">PLAYLIST</h5>
+                        <h5 class="playlist_write2">Tutto il meglio della musica italiana</h5>
+                        <h5 class="playlist_write3">Con il singolo di Elettra Laborghini</h5>
+                        </div>
+                    </div>
+                </div>
             </div>
         </main>
 
